@@ -1,5 +1,5 @@
 DIST elfhacks-0.4.0.tar.gz 9117 RMD160 65c8931b4391fc0127612a398a95e96396eb7bc2 SHA1 48f216a97d4f874464a528b73aa99cd0c518bbed SHA256 65c51f20e75df229b09fa3653c6b0a0a82e2190d55060d6eedfe9f166c52676e
 DIST elfhacks-0.4.1.tar.gz 9051 RMD160 4f576d9d7f2954e7e30b6f2fc02dd3b7cc0c6728 SHA1 471ee23a9030edefe193f162a0cb8bb492231109 SHA256 d1f4d57850586dd58e83bead2893f6ade90719960119cdde097ef9e6cd274804
-EBUILD elfhacks-0.4.0.ebuild 988 RMD160 f2f66185a76ec9750aed3882e0f39fc071001afb SHA1 8caf261eace42f1313c5930f94dbfe9cd01c3191 SHA256 ffa831bc4d0a80a4156b753d163802af35e32e92187185352985c17b20831bcc
-EBUILD elfhacks-0.4.1.ebuild 1352 RMD160 ed81630b2f546648366044b152d138be6c3467c1 SHA1 82b32398544b53785486470752bcd7bcbb1329cc SHA256 412986dc95f4188efa15c0c9462b661481f82f2e62c95706eafe0bba628ac97b
-MISC ChangeLog 232 RMD160 543a5d98c76aa0189e7bb046d4cea5771d1847f4 SHA1 ef030bfc1fda8f1b516c416249e86e62fd780512 SHA256 05beceb75c5a6dc7aa9c7cbf03cc2227b70b8e90a9516f6f99d5c43642894efc
+EBUILD elfhacks-0.4.0.ebuild 955 RMD160 6eb97c1e3f71dba98e31f223b1faedc581f6ea65 SHA1 e014bd27652e3408bb877c67b727fe9b2363df02 SHA256 ae65cb9dd0d49b021c106886cd6b6933aa5ea648bf0f3a1e528548d76b22662d
+EBUILD elfhacks-0.4.1.ebuild 1319 RMD160 972f53351438d7a85d45b4eb1135bf27af7f365d SHA1 3245f6f09ee0f49e0eed09431fd0a7011db550f0 SHA256 9db95c45c3bbd63dc11156ecb9e618d92f8f0521bcd5db6e3d2749785cfcaec7
+MISC ChangeLog 367 RMD160 88658075d9e0a9545efa25a2ee719e2bce9dcf26 SHA1 d7f7b8bc68cf5d0264522d9d5049ef9d874429dd SHA256 3244bc079e8a0eea4866b61946fe9296cbf7d8dac2a534f5bf7558aefb189aa9
