@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> elfhacks-0.4.0.ebuild,
+  elfhacks-0.4.1.ebuild:
+  Fixed some repoman reported errors.
+
   29 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> +elfhacks-0.4.0.ebuild,
   +elfhacks-0.4.1.ebuild:
   New package.
